@@ -1,5 +1,6 @@
 package com.jfixby.r3.fokker.gwt.collections;
 
+import java.util.ArrayList;
 import java.util.Iterator;
 
 import com.jfixby.cmns.api.collections.Collection;
@@ -10,7 +11,7 @@ import com.jfixby.cmns.api.collections.PoolElementsSpawner;
 
 public class GwtPool<T> implements Pool<T> {
 
-	final private List<T> legacy = Collections.newList();
+	final private ArrayList<T> legacy = new ArrayList<T>();
 
 	private PoolElementsSpawner<T> spawner;
 
@@ -27,7 +28,7 @@ public class GwtPool<T> implements Pool<T> {
 			T instance = spawner.spawnNewInstance();
 			return instance;
 		} else {
-			T last = legacy.removeLast();
+			T last = legacy.remove(legacy.size() - 1);
 			return last;
 		}
 	}
@@ -40,11 +41,11 @@ public class GwtPool<T> implements Pool<T> {
 
 	@Override
 	public void freeAll(Collection<T> collection) {
-		Iterator<T> iterator = collection.iterator();
-		while (iterator.hasNext()) {
-			T t = iterator.next();
+		for (int i = 0; i < collection.size(); i++) {
+			T t = collection.getElementAt(i);
 			this.free(t);
 		}
 	}
+
 
 }
